# who-said-what

./: .gitignore  pyproject.toml  run.py
app/: __init__.py  main.py
app/api/: example.py
app/core/: config.py  lifespan.py  loguru_config.py  middleware.py
app/enums/: model_enum.py
app/schemas/: __init__.py  example.py  response.py
app/service/: __init__.py  asr_service.py  diarization_service.py  embedding_service.py
app/utils/: audio_util.py
config/: settings.toml
tests/: __init__.py
tests/service/: test_asr_service.py  test_diarization_service.py  test_embedding_service.py
