[project]
name = "who-said-what"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sherpa-onnx==1.11.1+cuda",
    "soundfile>=0.13.1",
    "uvicorn>=0.34.2",
]

